@@ -8,7 +8,11 @@
 # usage and configuration information, see the JHOVE2 User's Guide at
 # http://jhove2.org.
 
-. ./env.sh
+ProgDir=`dirname "$0"`
+. "${ProgDir}/env.sh"
 
+if [ -z "${JAVA_OPTS}" ]; then
+  JAVA_OPTS="-Xms256m -Xmx1025m -XX:PermSize=64M -XX:MaxPermSize=256M"
+fi
 
-${JAVA} -cp "$CP" org.jhove2.app.JHOVE2CommandLine $@
+"${JAVA}" ${JAVA_OPTS} -cp "$CP" org.jhove2.app.JHOVE2CommandLine $@
